--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,7 +295,7 @@ jobs:
             cd .circleci/ansible
             echo "Inventory file : "
             cat inventory
-            ansible-playbook -i inventory deploy-backend.yml           
+            ansible-playbook -i inventory deploy-backend.yml --extra-vars "CIRCLE_WORKFLOW_ID=${CIRCLE_WORKFLOW_ID}"         
     
 
                                        
