--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -263,7 +263,8 @@ jobs:
             npm install
             npm run build
             npm audit fix --audit-level=critical --force 
-            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}"" --recursive 
+            aws s3 cp ./dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive 
+            echo "Deployed objects path: $(pwd)/dist"
 
   deploy-backend:
     docker:
