--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,7 +306,47 @@ jobs:
             cat inventory
             ansible-playbook -i inventory deploy-backend.yml --extra-vars "CIRCLE_WORKFLOW_ID=${CIRCLE_WORKFLOW_ID}"         
     
+  smoke-test:
+    docker:
+      - image: python:3.7-alpine3.11 
 
+    steps:
+      - checkout
+      - run:
+          name: "Install-dependencies"
+          command: |
+            apk add --update curl nodejs npm
+            pip install awscli
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: "Backend smoke test."
+          command: |  
+            BACKEND_IP=$(aws ec2 describe-instances \
+                --query 'Reservations[*].Instances[*].PublicIpAddress' \
+                --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                --output text | grep -v '\[web\]')
+            echo $BACKEND_IP >> ./.circleci/ansible/inventory 
+            cat ./.circleci/ansible/inventory
+            BACKEND_IP=$(echo "$BACKEND_IP" | tr -d '[:space:]')
+            export API_URL="http://${BACKEND_IP}:3030"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi    
+      - run:
+          name: "Frontend-smoke-test."
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+             echo ${URL} 
+             if curl -s ${URL} | grep "Welcome"
+             then
+                 return 1
+             else
+                 return 1
+             fi      
                                        
 workflows:
   default:
@@ -333,7 +373,9 @@ workflows:
       - deploy-frontend:
           requires: [run-migrations]  
       - deploy-backend:
-          requires: [run-migrations]    
+          requires: [run-migrations]  
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]      
       
       
              
