--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,7 +305,7 @@ jobs:
             pip install awscli
             aws --version
             cd backend  # Change to the backend directory
-            npm install       
+            npm install @nestjs/cqrs@latest      
       - run:
           name: Compress Backend
           command: |
@@ -328,7 +328,9 @@ jobs:
             cat inventory
             ansible-playbook -i inventory deploy-backend.yml --extra-vars "CIRCLE_WORKFLOW_ID=${CIRCLE_WORKFLOW_ID}"  
 
-                  
+      - destroy-environment:
+          id: ${CIRCLE_WORKFLOW_ID:0:7}
+          when: on_fail            
     
   smoke-test:
     docker:
