--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,7 +305,8 @@ jobs:
             pip install awscli
             aws --version
             cd backend  # Change to the backend directory
-            npm install @nestjs/cqrs@latest      
+            npm install --force
+     
       - run:
           name: Compress Backend
           command: |
